--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,15 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
-		<link rel="icon" href="favicon.ico">
+		<!-- <link rel="icon" href="favicon.ico"> -->
+		<link rel="shortcut icon" href="https://test.fx67ll.com/fx67ll-img-collection/luffy.jpg" type="image/x-icon" />
+		<link rel="apple-touch-icon" href="https://test.fx67ll.com/fx67ll-img-collection/luffy.jpg" />
 		<title>NFPBV</title>
 	</head>
 	<body>
 		<noscript>
-			<strong>We're sorry but default doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+			<strong>We're sorry but default doesn't work properly without JavaScript enabled. Please enable it to
+				continue.</strong>
 		</noscript>
 		<div id="app"></div>
 	</body>
