--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<!-- <link rel="icon" href="favicon.ico"> -->
 		<link rel="shortcut icon" href="https://test.fx67ll.com/fx67ll-img-collection/luffy.jpg" type="image/x-icon" />
-		<link rel="apple-touch-icon" sizes="440x440" href="https://test.fx67ll.com/fx67ll-img-collection/luffy.jpg" />
+		<link rel="apple-touch-icon" href="https://test.fx67ll.com/fx67ll-img-collection/luffy.jpg" />
 		<title>NFPBV</title>
 	</head>
 	<body>
