--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<!-- <link rel="icon" href="favicon.ico"> -->
-		<link rel="shortcut icon" href="https://test.fx67ll.com/fx67ll-img-collection/luffy.jpg" type="image/x-icon" />
+		<link rel="shortcut icon" type="image/x-icon" href="https://test.fx67ll.com/fx67ll-img-collection/luffy.jpg" />
 		<title>NFPBV</title>
 	</head>
 	<body>
