--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<!-- <link rel="icon" href="favicon.ico"> -->
 		<link rel="shortcut icon" type="image/x-icon" href="https://test.fx67ll.com/fx67ll-img-collection/luffy.jpg" />
-		<title>fx67ll's Node.js Projects</title>
+		<title>fx67ll's Node.js Project</title>
 	</head>
 	<body>
 		<noscript>
